--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,38 +1,45 @@
 .login-page {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .login-page form {
-  min-width: 50%;
+  min-width: 40%;
   text-align: center;
 }
 
 input {
-  /* background-color: transparent; */
   color: var(--secondary-text-color);
   border: 1px solid var(--border-color);
-  width: 100%;
   outline: none;
   border: none;
 }
 
-/* input:focus {
-  background-color: transparent;
-} */
-
 .login-page form input[type="text"] {
   width: 100%;
-  padding: 5px 15px;
-  background-color: black;
+  border: 1px solid var(--border-color-light);
+  color: var(--primary-text-color);
+  padding: 1rem 0.5rem;
+  border-radius: 4px;
+}
+
+.login-page form input[type="text"]:focus {
+  border: 1px solid #0366d6;
 }
 
 .login-page form input[type="submit"] {
-  min-width: 50%;
+  min-width: 40%;
+  background-color: var(--secondary-bg-color);
+  color: var(--header-text-color);
+  padding: 0.5em;
+  border-radius: 4px;
+  margin-top: 1rem;
 }
 
-.login-page form input[type="submit"]:hover {
-  border: 1px solid red;
+.login-page form input[type="submit"]:focus {
+  padding: 0.75em;
 }
