--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,6 +1,15 @@
 :root {
   --btn-text-color: #fff;
 }
+.signup-btn {
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+.signup-btn:hover {
+  box-shadow: 2px 2px 2px #0366d6;
+}
 .login-page {
   min-height: 100vh;
   display: flex;
