project structure well structured

--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,58 +1,4 @@
 /* ------------------------------ */
-/* sub header */
-.sub-header {
-  background-color: var(--primary-bg-color);
-  border-bottom: 1px solid var(--border-color-light);
-  position: sticky;
-  overflow-y: hidden;
-  overflow-x: auto;
-  height: 60px;
-  display: flex;
-  top: 0;
-}
-
-.sub-header ul {
-  display: flex;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  margin-left: 30%;
-}
-
-.sub-header ul li {
-  font-size: var(--font-size-medium);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1.5rem;
-  padding-top: 30px;
-}
-
-.sub-header ul li:hover {
-  color: var(--primary-text-color);
-  font-weight: var(--font-weight-lightbold);
-}
-
-.sub-header ul li a {
-  color: var(--secondary-text-color);
-  margin: 0px 4px;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
-  padding-bottom: 10px;
-}
-
-.sub-header ul li a.active {
-  border-bottom: 2px solid #d73a49;
-}
-
-.repo-count {
-  background-color: var(--border-color-light);
-  padding: 0px 6px;
-  border-radius: 0.5rem;
-  margin-left: 0.25rem;
-}
-
 /* main body repo */
 
 .profile-repo-list {
@@ -166,17 +112,18 @@
   background-color: var(--tetiary-bg-color);
   border: 0.5px solid var(--border-color-light);
   color: var(--primary-text-color);
-  padding: 5px 20px;
+  padding: 0.325rem 0.75rem;
   border-radius: 4px;
   outline: none;
   box-shadow: none;
   white-space: nowrap;
   display: flex;
   align-items: center;
+  text-align: center;
 }
 
 .star-btn .octicon-star {
-  margin-right: 6px;
+  margin-right: 0.15rem;
 }
 
 .prof-img-large,
@@ -190,18 +137,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  /* sub header */
-  .sub-header {
-    margin-top: 150px;
-  }
-
-  .sub-header ul {
-    width: 95%;
-    margin: auto;
-    overflow-x: auto;
-    justify-content: flex-start;
-  }
-
   /* repo list section */
   .repo-sec input {
     width: 95%;
@@ -244,12 +179,12 @@
   .repo-sec .repos {
     width: 100%;
   }
-}
 
-/* 480px screen width */
+  .repos li .star-btn {
+    padding: 0.325rem 0.5rem;
+  }
 
-@media screen and (max-width: 480px) {
-  .sub-header {
-    margin-top: 130px;
+  .star-btn .octicon-star {
+    margin-right: 0.15rem;
   }
 }
